Camlp4 Version 3.04
-------------------

- [15 Nov 01] In revised syntax, in let binding in sequences, the "in"
  can be replaced by a semicolon; the revised syntax printer pr_r.cmo
  now rather prints a semicolon there.
- [07 Nov 01] Added the ability to use $ as token: was impossible so far,
  because of AST quotation uses it for its antiquotation. The fix is just
  a little (invisible) change in Plexer.
- [05 Nov 01] Added option -tc (types comment) when using pr_o or pr_r
  try to print comments inside sum and record types like they are in
  the source (not by default, because may work incorrectly).
- [05 Nov 01] Added option -ca (comment after) when using pr_o or pr_r:
  print ocamldoc comments after the declarations, when they are before.
- [04 Nov 01] Added locations for variants and labels declarations in AST
  (file MLast.mli).
- [03 Nov 01] In pretty printers pr_o and pr_r, skip to next begin of line
  when displaying the sources between phrase, to prevent e.g. the displaying
  of the possible last comment of a sum type declaration (the other comment
  being not displayed anyway).
- [24 Oct 01] Fixed incorrect locations in sequences.
- [24 Oct 01] Was erroneously compiled by the OCaml boot compiler instead
  of the generated ocamlc. Fixed.
- [15 Oct 01] Fixed some parsing differences between pa_o and ocamlyacc:
  in parsers, in labels.
- [12 Oct 01] Added missing bigarray syntax a.{b} (and Cie) in standard
  syntax (pa_o).

Camlp4 Version 3.03
-------------------

- [09 Oct 01] Fixed bug: the token !$ did not work. Fixed and completed
  some syntaxes of labels patterns. Added missing case in exception
  declaration (exception rebinding).
- [05 Oct 01] Fixed bug in normal syntax: when defining a constructor
  named "True" of "False" (capitalized, i.e. not like the booleans), it
  did not work.
- [04 Oct 01] Fixed some revised and quotation syntaxes in objects classes
  and types (cleaner). Cleaned up also several parts of the parsers.